--- a/assets/scss/_color.scss
+++ b/assets/scss/_color.scss
@@ -28,7 +28,7 @@
 	$box_color: #121111;
 
 //Theme color
-	$theme-color: #75CEDD;
+	$theme-color: #003D7D;
 	$theme-color2: #4a4b4d;
 	$theme-color3: #f27420;
 	$theme-color4: #7596dd;
