--- a/assets/scss/_headerMenu.scss
+++ b/assets/scss/_headerMenu.scss
@@ -30,7 +30,9 @@ header{
 
 
         .logo{
-            width: 125px;
+            img{
+            width: 100%;
+            }
         }
 
     
@@ -239,7 +241,11 @@ header{
 
 
         .logo{
-            width: 250px;
+            img {
+
+            width: 100%;
+            }
+
         }
 
         img{
