--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -2312,31 +2312,6 @@ header {
   .header-sticky.sticky-bar.sticky {
     padding: 15px 0px; } }
 
-.mobile_menu {
-  position: absolute;
-  right: 0px;
-  width: 100%;
-  z-index: 99; }
-  .mobile_menu .slicknav_menu {
-    background: transparent;
-    margin-top: 0px !important; }
-    .mobile_menu .slicknav_menu .slicknav_btn {
-      top: -30px; }
-      .mobile_menu .slicknav_menu .slicknav_btn .slicknav_icon-bar {
-        background-color: #003D7D !important; }
-    .mobile_menu .slicknav_menu .slicknav_nav {
-      margin-top: 4px !important; }
-      .mobile_menu .slicknav_menu .slicknav_nav a:hover {
-        background: transparent;
-        color: #003D7D; }
-      .mobile_menu .slicknav_menu .slicknav_nav a {
-        font-size: 15px;
-        padding: 7px 10px; }
-      .mobile_menu .slicknav_menu .slicknav_nav .slicknav_item a {
-        padding: 0 !important; }
-      .mobile_menu .slicknav_menu .slicknav_nav span {
-        font-size: 15px; }
-
 #myNav {
   width: 0%; }
 
@@ -2398,110 +2373,12 @@ header {
   background-color: rgba(0, 61, 125, 0.9);
   height: 100%; }
 
-.header {
-  display: none; }
-
-@media (max-width: 991px) {
-  .full-screen-header {
-    display: none !important; }
-
-  .header {
-    display: block; } }
-.container .header {
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0; }
-
-/* Menu Header */
-.header {
-  background: #080D27;
-  overflow: hidden !important;
-  height: 55px;
-  width: 100%;
-  z-index: 1;
-  position: sticky;
-  transition: all 0.4s ease-out, background 1s ease-out;
-  left: 0;
-  padding-right: 15px !important; }
-
-.header.menu-open {
-  height: 100%;
-  background: #111;
-  transition: all 0.45s ease-out, background 0.8s ease-out; }
-
-/* Menu List items */
-.mobile-menu {
-  clear: both; }
-
-.header ul.menu {
-  position: relative;
-  display: block;
-  padding: 0px 40px 0;
-  list-style: none; }
-
-.header ul.menu li.menu-item a {
-  display: block;
-  position: relative;
-  color: #fff;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 2.8;
-  width: 100%;
-  -webkit-tap-highlight-color: transparent; }
-
-.header ul.menu li.menu-item {
-  border-bottom: 1px solid #333;
-  margin-top: 5px;
-  opacity: 0;
-  transition: opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-  transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99);
-  transition: transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99), opacity 0.6s cubic-bezier(0.4, 0.01, 0.165, 0.99), -webkit-transform 0.5s cubic-bezier(0.4, 0.01, 0.165, 0.99); }
-
-.header ul.menu li.menu-item:nth-child(1) {
-  transition-delay: 0.35s; }
-
-.header ul.menu li.menu-item:nth-child(2) {
-  transition-delay: 0.3s; }
-
-.header ul.menu li.menu-item:nth-child(3) {
-  transition-delay: 0.25s; }
-
-.header ul.menu li.menu-item:nth-child(4) {
-  transition-delay: 0.2s; }
-
-.header ul.menu li.menu-item:nth-child(5) {
-  transition-delay: 0.15s; }
-
-.header ul.menu li.menu-item:nth-child(6) {
-  transition-delay: 0.1s; }
-
-.header ul.menu li.menu-item:nth-child(7) {
-  transition-delay: 0.05s; }
-
-.header.menu-open ul.menu li.menu-item {
-  opacity: 1; }
-
-.header.menu-open ul.menu li.menu-item:nth-child(1) {
-  transition-delay: 0.05s; }
-
-.header.menu-open ul.menu li.menu-item:nth-child(2) {
-  transition-delay: 0.1s; }
-
-.header.menu-open ul.menu li.menu-item:nth-child(3) {
-  transition-delay: 0.15s; }
-
-.header.menu-open ul.menu li.menu-item:nth-child(4) {
-  transition-delay: 0.2s; }
-
-.header.menu-open ul.menu li.menu-item:nth-child(5) {
-  transition-delay: 0.25s; }
-
-.header.menu-open ul.menu li.menu-item:nth-child(6) {
-  transition-delay: 0.3s; }
-
-.header.menu-open ul.menu li.menu-item:nth-child(7) {
-  transition-delay: 0.35s; }
+.mobile-header {
+  display: none !important;
+  padding-top: 2vh;
+  padding-bottom: 2vh; }
+  .mobile-header .logo img {
+    width: 80%; }
 
 /* Menu Icon */
 .icon-container {
@@ -2558,81 +2435,283 @@ header {
   -webkit-transform: translateY(3px) rotate(-45deg);
   transform: translateY(3px) rotate(-45deg); }
 
-.sidenav {
+.header-navigation-area {
+  width: 100%; }
+
+.main-navigation ul li {
+  display: inline-block;
+  position: relative; }
+
+.main-navigation ul li a {
+  padding: 25px 10px;
+  display: block;
+  text-transform: capitalize;
+  color: #414040;
+  font-size: 16px;
+  font-weight: 500;
+  position: relative;
+  z-index: 1;
+  line-height: 1; }
+
+.main-navigation ul ul li a {
+  color: #ffffff; }
+
+/* Main Menu CSS End*/
+/* Submenu / Dropdown Menu CSS */
+.main-navigation ul li ul {
+  position: absolute;
+  width: 250px;
+  left: 0;
+  top: 65px;
+  z-index: 2;
+  -webkit-transition: .3s;
+  transition: .3s;
+  visibility: hidden;
+  opacity: 0;
+  background-color: #1e1916;
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+.main-navigation ul li:hover > ul {
+  opacity: 1;
+  visibility: visible; }
+
+.main-navigation ul li ul li a {
+  padding: 14px 20px;
+  line-height: 26px; }
+
+.main-navigation ul li ul li {
+  display: block;
+  text-align: left; }
+
+.main-navigation ul li ul ul {
+  left: 250px;
+  top: 0; }
+
+.main-navigation ul li ul li {
+  border-bottom: 1px solid #e5e5e52b; }
+
+.main-navigation ul li ul li:last-child {
+  border-bottom: 0; }
+
+/* Submenu / Dropdown Menu CSS End */
+/* Mobile Menu CSS Start*/
+.mobile-menu-trigger {
+  cursor: pointer;
+  width: 80%;
+  height: 5vh;
+  display: none;
+  background: #003D7D;
+  border: none; }
+
+.mobile-menu-trigger span {
+  height: 2px;
+  display: block;
+  width: 35px;
+  margin-bottom: 9px;
+  background-color: #fff;
+  margin-left: auto;
+  margin-right: auto; }
+
+.mobile-menu-trigger span:last-child {
+  margin-bottom: 0; }
+
+.mobile-menu-container {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #231d1b;
+  z-index: 999999;
+  opacity: 0;
+  visibility: hidden;
+  overflow-y: scroll;
+  -ms-transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+  transform: translateX(100%);
+  overflow-x: hidden;
+  -webkit-transition: .4s;
+  transition: .4s; }
+
+.mobile-menu-container li {
+  opacity: 0;
+  visibility: hidden;
+  -ms-transform: translateX(1000px);
+  -webkit-transform: translateX(1000px);
+  transform: translateX(100px);
+  -webkit-transition: 1s;
+  transition: 1s; }
+
+.mobile-menu-container li > a .slicknav_arrow:after {
+  content: "\f067";
+  position: absolute;
+  font-family: 'FontAwesome';
+  top: 0;
+  bottom: 0;
+  color: black;
+  z-index: 999;
+  margin: 0 auto;
+  text-align: center;
+  right: 0;
+  left: 0;
+  font-size: 16px;
+  line-height: 50px; }
+
+.mobile-menu-container.menu-open li.slicknav_open > a .slicknav_arrow:after {
+  content: "\f068"; }
+
+.mobile-menu-container.menu-open {
+  opacity: 1;
+  visibility: visible;
+  -ms-transform: translateX(0%);
+  -webkit-transform: translateX(0%);
+  transform: translateX(0%); }
+
+.mobile-menu-container.menu-open li {
+  opacity: 1;
+  visibility: visible;
+  -ms-transform: translateX(0);
+  -webkit-transform: translateX(0);
+  transform: translateX(0); }
+
+.mobile-menu-close {
+  position: absolute;
+  right: 20px;
+  top: 50px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  z-index: 1; }
+
+.mobile-menu-close::before {
+  left: 15px;
+  -ms-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+.mobile-menu-close::after {
+  right: 13px;
+  -ms-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg); }
+
+.mobile-menu-close::before, .mobile-menu-close::after {
+  position: absolute;
+  height: 30px;
+  width: 2px;
+  background: #ffffff;
+  content: '';
+  top: 0; }
+
+#mobile-menu-wrap {
+  display: block;
   height: 100%;
   width: 100%;
-  opacity: 0;
-  position: fixed;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  background-color: #070b21;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-  text-align: center; }
-  .sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s; }
-  .sidenav a:hover {
-    color: #f1f1f1; }
-  .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px; }
-  .sidenav .colored-heading-dark {
-    text-align: left;
-    font-size: calc(22px + 3vw);
-    font-weight: 500;
-    color: #fff; }
-    .sidenav .colored-heading-dark em {
-      color: #0AB89F;
-      font-style: normal;
-      font-size: calc(22px + 2vw); }
+  position: absolute;
+  right: 0;
+  padding: 150px 20px 20px 20px; }
 
-.main-carousel {
-  background: transparent; }
-  .main-carousel img {
-    height: auto !important;
-    width: 80% !important; }
-  .main-carousel p {
-    color: white;
-    padding-left: 0   px; }
-  .main-carousel .flickity-prev-next-button.next {
-    right: 0px;
-    position: absolute;
-    top: -40px; }
-  .main-carousel .flickity-prev-next-button.previous {
-    left: 90%;
-    position: absolute;
-    top: -40px; }
-  .main-carousel .row {
-    margin: 0px !important; }
-  .main-carousel .carousel-cell {
-    width: 33.3% !important;
-    height: auto;
-    margin-right: 10px; }
-  .main-carousel .carousel-cell:after {
-    content: "";
-    background: #4c4c4d;
-    position: absolute;
-    bottom: 0;
-    left: -1vw;
-    height: 100%;
-    width: 1px; }
+#mobile-menu-wrap div {
+  background-color: transparent; }
 
+#mobile-menu-wrap .slicknav_item i {
+  display: none; }
+
+/*Sidebar Start*/
+.slicknav_nav, .slicknav_nav.slicknav_hidden {
+  display: block !important;
+  text-align: left; }
+
+.slicknav_btn {
+  display: none !important; }
+
+.slicknav_menu {
+  padding-left: 0; }
+
+.slicknav_nav li > a {
+  display: block;
+  font-weight: 400; }
+
+.slicknav_item.slicknav_row a {
+  border-bottom: 0; }
+
+.slicknav_nav .slicknav_row, .slicknav_nav a {
+  padding: 10px 0px;
+  margin: 0; }
+
+.slicknav_nav .slicknav_arrow {
+  font-size: 0;
+  height: 100%;
+  width: 50px;
+  display: inline-block;
+  position: absolute;
+  top: 0; }
+
+.slicknav_nav ul {
+  margin: 0 0 0 0px; }
+
+.slicknav_nav .menu-item-has-children ul {
+  margin-bottom: 00px; }
+
+.slicknav_nav .menu-item-has-children ul li {
+  padding-left: 25px; }
+
+.sub-menu .menu-item-has-children a i {
+  position: absolute;
+  right: 20px;
+  top: 20px; }
+
+.slicknav_nav a:hover, .slicknav_nav .slicknav_row:hover {
+  background-color: transparent; }
+
+.slicknav_nav .slicknav_row:hover, .slicknav_nav a:hover {
+  border-radius: 0; }
+
+.slicknav_item.slicknav_row {
+  display: inline-block;
+  width: 100%;
+  position: relative; }
+
+.slicknav_arrow {
+  -webkit-transition: .3s;
+  transition: .3s;
+  right: 0;
+  top: 17px;
+  position: absolute; }
+
+.slicknav_nav a, .slicknav_row a {
+  color: #000000;
+  font-size: 18px;
+  display: inline-block; }
+
+/*Sidebar Start*/
+/* Mobile Menu CSS End*/
+@media only screen and (max-width: 991px) {
+  /*Menu*/
+  .header-navigation-area {
+    display: none; }
+
+  .mobile-menu-trigger {
+    display: block; } }
+@media (max-width: 991px) {
+  .full-screen-header {
+    display: none !important; }
+
+  .header {
+    display: block; }
+
+  .mobile-header {
+    display: flex !important; } }
 #read-more {
   background-color: white;
   padding-bottom: calc(45px + 7vh);
   margin-top: -30vh;
   margin-bottom: 0vh; }
+  @media (max-width: 991px) {
+    #read-more {
+      padding-bottom: calc(15px + 3vh); } }
   #read-more .icon-row {
     height: 18vh;
     position: relative;
@@ -3036,7 +3115,8 @@ header {
     padding-left: 40px; }
     @media (max-width: 991px) {
       #read-more .contact-area .colored-heading-dark {
-        font-size: calc(14px + 1vw); } }
+        font-size: calc(24px + 1.2vw);
+        padding-bottom: 15px; } }
   #read-more .contact-area p {
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
@@ -3044,6 +3124,11 @@ header {
   #read-more .contact-area i {
     font-size: 40px;
     text-align: center; }
+  @media (max-width: 991px) {
+    #read-more .contact-area p {
+      font-size: calc(10px + 0.3vw); }
+    #read-more .contact-area i {
+      font-size: calc(10px + 3vw); } }
   #read-more .contact-area .vertical-center {
     display: flex;
     align-items: center; }
@@ -3055,6 +3140,9 @@ header {
     height: 1px;
     width: 100%;
     padding-bottom: 25px; }
+    @media (max-width: 991px) {
+      #read-more .contact-area hr {
+        padding-bottom: 15px; } }
   #read-more .intro-area .colored-heading-dark {
     font-family: "Bebas Neue", sans-serif;
     color: #3E3D3D;
@@ -3065,7 +3153,8 @@ header {
     padding-bottom: 30px; }
     @media (max-width: 991px) {
       #read-more .intro-area .colored-heading-dark {
-        font-size: calc(14px + 1vw); } }
+        font-size: calc(24px + 1.2vw);
+        padding-bottom: 20px; } }
   #read-more .intro-area .colored-heading {
     font-family: "Bebas Neue", sans-serif;
     color: #003D7D;
@@ -3076,14 +3165,20 @@ header {
     padding-bottom: 40px; }
     @media (max-width: 991px) {
       #read-more .intro-area .colored-heading {
-        font-size: calc(14px + 1vw); } }
+        font-size: calc(24px + 1.2vw);
+        padding-bottom: 10px; } }
   #read-more .intro-area p {
     font-family: "Montserrat", sans-serif;
     color: black;
-    font-size: 16px;
+    font-size: calc(16px);
     padding-bottom: 40px;
     text-transform: uppercase;
     line-height: 42px; }
+    @media (max-width: 991px) {
+      #read-more .intro-area p {
+        font-size: calc(10px + 0.2vw);
+        line-height: 26px;
+        padding-bottom: 20px; } }
   #read-more .intro-area .find-out-dark-2 {
     display: flex;
     justify-content: center;
@@ -3105,10 +3200,8 @@ header {
     transition: all 0.25s cubic-bezier(0.31, -0.105, 0.43, 1.4); }
     @media (max-width: 991px) {
       #read-more .intro-area .find-out-dark-2 {
-        width: calc(30px + 50vw);
-        height: calc(12px + 3vh);
-        color: #13171B;
-        background-color: white; } }
+        width: calc(30px + 25vw);
+        height: calc(12px + 3vh); } }
     #read-more .intro-area .find-out-dark-2 span {
       font-family: "Bebas Neue", sans-serif;
       font-size: 30px; }
@@ -3664,7 +3757,7 @@ header {
         margin-right: 25px; }
   @media (max-width: 991px) {
     .slider-height {
-      height: calc(40vh + 25px); } }
+      height: calc(90vh + 25px); } }
 
 .slider-height2 {
   min-height: 410px;
@@ -4308,11 +4401,107 @@ iframe {
     padding-bottom: 0px; }
   #about-us .three-facts p {
     font-family: "Roboto", sans-serif;
-    font-size: calc(10px + 0.2vw);
+    font-size: calc(10px + 0.23vw);
     color: black; }
   #about-us .three-facts i {
     font-size: 5vw;
     color: #003D7D; }
+
+#timeline .padding-top {
+  padding-top: 10vh; }
+#timeline .padding-bot {
+  padding-bottom: 5vh; }
+#timeline .intro h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: italic;
+  font-size: 45px; }
+#timeline .intro p {
+  color: #121111;
+  font-weight: 400;
+  font-size: calc(10px + 0.2vw);
+  font-family: "Montserrat", sans-serif;
+  text-align: left; }
+#timeline .intro .img-float-1 {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-left: auto;
+  margin-right: auto;
+  top: 5%;
+  width: calc(50px + 18vw); }
+#timeline .intro .img-float-2 {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-left: auto;
+  margin-right: auto;
+  top: 35%;
+  width: calc(59px + 25vw); }
+#timeline .intro .img-float-3 {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-left: auto;
+  margin-right: auto; }
+#timeline .mid-section h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: italic;
+  font-size: 45px; }
+#timeline .mid-section p {
+  color: 121111;
+  font-weight: 400;
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+  text-align: left; }
+#timeline .mid-section .img-float-1 {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 40%;
+  width: 12vw; }
+#timeline .mid-section .img-float-2 {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 15%;
+  width: 20vw; }
+#timeline .mid-section .img-float-3 {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-left: auto;
+  margin-right: auto; }
+#timeline .last-section h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: italic;
+  font-size: 45px; }
+#timeline .last-section p {
+  color: 121111;
+  font-weight: 400;
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+  text-align: left; }
+#timeline .last-section .img-float-1 {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 10%;
+  width: 12vw; }
+#timeline .last-section .img-float-2 {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 10%;
+  width: 20vw; }
+#timeline .last-section .img-float-3 {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-left: auto;
+  margin-right: auto; }
 
 .gallery-area .gallery-box .single-gallery {
   overflow: hidden;
